User Management Application/Keycloak/k8s/keycloak-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.3-0
          args: ["start-dev", "--import-realm","--proxy=edge","--hostname=[INGRESS_HOSTNAME]","--hostname-strict=false","--hostname-strict-https=false"]
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: keycloak-realm-config
              mountPath: /opt/keycloak/data/import/realm-export.json
              subPath: realm-export.json
            - name: keycloak-data
              mountPath: /opt/keycloak/data/
      volumes:
        - name: keycloak-realm-config
          configMap:
            name: keycloak-realm-config
        - name: keycloak-data
          persistentVolumeClaim:
            claimName: keycloak-pvc
