User Management Application/Keycloak/k8s/kc-postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kc-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kc-postgres
  template:
    metadata:
      labels:
        app: kc-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          resources:
            requests:
                ephemeral-storage: "500Mi"
            limits:
                ephemeral-storage: "1Gi"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: kc-postgres-storage
      volumes:
        - name: kc-postgres-storage
          persistentVolumeClaim:
            claimName: kc-postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: kc-postgres
spec:
  ports:
    - port: 5432
  selector:
    app: kc-postgres
