User Management Application/Keycloak/k8s/kc-postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: kc-postgres
spec:
  ports:
    - port: 5432
  selector:
    app: kc-postgres
