User Management Application/Keycloak/k8s/keycloak-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-clip
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - port: 8081
      targetPort: 8080
      name: keycloak
      protocol: TCP
