User Management Application/Keycloak/k8s/keycloak-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/session-cookie-name: "KEYCLOAK_SESSION"
    nginx.ingress.kubernetes.io/session-cookie-path: "/"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
    - host: [INGRESS_HOSTNAME]
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-clip
                port:
                  number: 8081
